add vt and features for performance