@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
+		<version>3.5.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.balakshievas</groupId>
@@ -13,19 +13,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jelenoid</name>
 	<description>jelenoid</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -137,6 +124,7 @@
 					<excludeDevtools>false</excludeDevtools>
 					<jvmArguments>
 						-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+						-Djdk.tracePinnedThreads=short
 					</jvmArguments>
 				</configuration>
 			</plugin>
